--- a/whimsyWares.css
+++ b/whimsyWares.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     font-family: Arial;
-    border: border-box;
+    border: border-box; /* add border to existing width and not take extra width */
 }
 
 .navbar {
@@ -14,14 +14,16 @@
     
 }
 .nav-logo {
-    height: 50px;
+    height: 90px;
     width:100px;
+    margin-bottom: 10px;
 }
 .logo {
-    background-image: url(amazon.png);
-    height: 50px;
+    background-image: url(logo_transparent.png);
+    height: 60px;
     width: 100%;
-    background-size: cover;
+    background-size: contain;
+    top: 0%;
 
 }
 .border{
@@ -76,7 +78,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    background-color: #febd68;
+    background-color: pink;
     border-top-right-radius:4px ;
     border-bottom-right-radius:4px ;
     color: #0f1111;
@@ -108,7 +110,7 @@ span{
 
 .panel{
     height: 40px;
-    background-color: #222f3d;
+    background-color: #4d75a0;
     display: flex;
     color: white;
     align-items: center;
@@ -131,9 +133,9 @@ span{
 
 
 .hero-section{
-    background-image: url(background.jpg);
+    background-image: url(background.avif);
     height: 350px;
-    background-size: cover;
+    background-size: contain;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -204,7 +206,7 @@ footer{
 
 }
 .foot-panel2{
-    background-color: #222f3d;
+    background-color: #4d75a0;
     color: white;
     height: 300px ;
     display: flex;
@@ -229,16 +231,17 @@ ul a{
     align-items: center;
 }
 .logo{
-    background-image: url(amazon.png);
+    margin-top: 1px;
+    background-image: url(logo_transparent.png);
     background-size: cover;
-    height: 50px;
+    height: 100px;
     width: 100px;
 }
 
 .foot-panel4{
     background-color: #0f1111;
     color: white;
-    height: 80px;
+    height: 70px;
     /* display: flex;
     justify-content: center;
     align-items: center;
